--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,16 @@ version: "3"
 services:
   redis:
     image: redis:alpine
-    container_name: redis
+    container_name: pad-redis
     restart: always
   pad:
     build: .
-    container_name: pad
+    container_name: pad-app
     restart: always
     ports:
       - "8080:8080"
     environment:
       REDIS_URI: redis://redis:6379/0
+      REDIS_PREFIX: pad
       PAD_SALT: secret_salt
+      PORT: 8080
