--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,5 @@
 version: "3"
 services:
-  redis:
-    image: redis:alpine
-    container_name: pad-redis
-    restart: always
   pad:
     build: .
     container_name: pad-app
@@ -11,7 +7,5 @@ services:
     ports:
       - "8080:8080"
     environment:
-      REDIS_URI: redis://redis:6379/0
-      REDIS_PREFIX: pad
-      PAD_SALT: secret_salt
-      PORT: 8080
+        PAD_SALT: random_salt_here
+        PAD_PORT: 8080
