--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ go:
   - 1.7
   - 1.8
   - 1.9
+  - "1.10"
 
 install:
-  - go get -t ./...
+  - go get -u github.com/golang/dep/cmd/dep
+  - dep ensure -vendor-only
 
 script:
   - make test
