--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-        PAD_SALT: random_salt_here
-        PAD_PORT: 8080
+      PAD_SALT: random_salt_here
+      PAD_PORT: 8080
+    volumes:
+      - ./pad.db:/app/pad.db
