--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,6 +24,9 @@
 #   go-tests = true
 #   unused-packages = true
 
+[prune]
+  go-tests = true
+  unused-packages = true
 
 [[constraint]]
   name = "github.com/boltdb/bolt"
@@ -34,13 +37,13 @@
   version = "3.3.2"
 
 [[constraint]]
+  name = "github.com/go-chi/render"
+  version = "1.0.0"
+
+[[constraint]]
   name = "github.com/kelseyhightower/envconfig"
   version = "1.3.0"
 
 [[constraint]]
   name = "github.com/speps/go-hashids"
   version = "1.0.0"
-
-[prune]
-  go-tests = true
-  unused-packages = true
