--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -15,9 +15,13 @@
   version = "1.0.0"
 
 [[constraint]]
-  name = "github.com/kelseyhightower/envconfig"
-  version = "1.3.0"
-
-[[constraint]]
   name = "github.com/speps/go-hashids"
   version = "1.0.0"
+
+[[constraint]]
+  name = "github.com/jessevdk/go-flags"
+  version = "1.4.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/hashicorp/logutils"
