--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - "8080:8080"
     environment:
-      PAD_DB: /app/db/pad.db
-      PAD_SALT: random_salt_here
+      PAD_DB_PATH: /app/db
+      PAD_SECRET: random_salt_here
       PAD_PORT: 8080
     volumes:
       - ./db:/app/db
