--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -3,8 +3,8 @@
   unused-packages = true
 
 [[constraint]]
-  name = "github.com/boltdb/bolt"
-  version = "1.3.1"
+  name = "github.com/coreos/bbolt"
+  version = "1.3.0"
 
 [[constraint]]
   name = "github.com/go-chi/chi"
