--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -2,9 +2,9 @@ name: build
 
 on:
   push:
-    branches: [ master ]
+    branches:
+    tags:
   pull_request:
-    branches: [ master ]
 
 jobs:
   test:
