--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,3 +50,17 @@ linters:
 linters-settings:
   goimports:
     local-prefixes: github.com/dotzero/pad
+  gomnd:
+    settings:
+      mnd:
+        checks: condition,operation,return
+
+issues:
+  exclude-use-default: false
+  exclude:
+    - ST1000 # ST1000: at least one file in a package should have a package comment
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - errcheck
+        - gosec
